Update Lein config